Added support for compiling in Java 11