@@ -18,10 +18,6 @@
 
 package com.mongodb.util;
 
-import com.mongodb.BasicDBList;
-import com.mongodb.BasicDBObject;
-import com.mongodb.DBObject;
-import com.mongodb.DBRef;
 import java.text.ParsePosition;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -29,11 +25,12 @@ import java.util.GregorianCalendar;
 import java.util.SimpleTimeZone;
 import java.util.UUID;
 import java.util.regex.Pattern;
-import javax.xml.bind.DatatypeConverter;
+
 import org.bson.BSON;
 import org.bson.BSONObject;
 import org.bson.BasicBSONCallback;
 import org.bson.BsonUndefined;
+import org.bson.internal.Base64;
 import org.bson.types.BSONTimestamp;
 import org.bson.types.Binary;
 import org.bson.types.Code;
@@ -41,6 +38,11 @@ import org.bson.types.CodeWScope;
 import org.bson.types.MaxKey;
 import org.bson.types.MinKey;
 import org.bson.types.ObjectId;
+
+import com.mongodb.BasicDBList;
+import com.mongodb.BasicDBObject;
+import com.mongodb.DBObject;
+import com.mongodb.DBRef;
 
 /**
  * Converts JSON to DBObjects and vice versa.
@@ -130,7 +132,7 @@ public class JSONCallback extends BasicBSONCallback {
       } else {
         type = Integer.valueOf(extracted.toString());
       }
-      byte[] bytes = DatatypeConverter.parseBase64Binary((String) b.get("$binary"));
+      byte[] bytes = Base64.decode((String) b.get("$binary"));
       o = new Binary((byte) type, bytes);
     } else if (b.containsField("$undefined") && b.get("$undefined").equals(true)) {
       o = new BsonUndefined();
